fix flex alignment and height

--- a/src/furo/assets/styles/_scaffold.sass
+++ b/src/furo/assets/styles/_scaffold.sass
@@ -109,8 +109,6 @@ article
 .toc-sticky
   position: sticky
   top: 0
-  height: min(100%, 100vh)
-  height: 100vh
 
   display: flex
   flex-direction: column
